--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,13 @@
 <head>
   <title>Map</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?&sensor=true">
+  </script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<script type="text/javascript"src="https://maps.googleapis.com/maps/api/js?key=YOUR API KEY!!!&sensor=true">
-</script>
+
 <body>
 
 <%= yield %>
